using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace ETModel
{
    public static class CharacterAnim
    {
        public const string Run = "Run";
        public const string Hit = "Hit";
        public const string Dead = "Dead";
    }
}
